chore: cleanup redundant dependencies